--- a/index.html
+++ b/index.html
@@ -5,12 +5,71 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>daplab :)</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    Hello world
-    <script src="script.js"></script>
+    <div class="container">
+        <h1 class="title">
+            Welcome to <a href="https://sites.uci.edu/daplab">the Design and Partnership Lab!</a>
+        </h1>
+
+        <p class="description">
+            Take a look at all of our awesome tech sig members below :)</code>
+        </p>
+
+        <div class="grid">
+            <div class="card">
+                <h3>John</h3>
+                <p>Favorite emoji: 🤝</p>
+            </div>
+            <div class="card">
+                <h3>June</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Julie</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Carly</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Jessica</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Minh</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Sam</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Audrey</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Mehraeel</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Isabel</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Karla</h3>
+                <p>Favorite emoji: ?</p>
+            </div>
+            <div class="card">
+                <h3>Jenny</h3>
+                <p>Favorite emoji: 🌱</p>
+            </div>
+        </div>
+    </div>
+    <script src=" script.js"></script>
 </body>
 
 </html>
