I like cycling emojis

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="grid">
             <div class="card">
                 <h3>John</h3>
-                <p>Favorite emoji: 🐈</p>
+                <p>Favorite emoji: 🚴🏼‍♂️</p>
             </div>
             <div class="card">
                 <h3>June</h3>
