added my favorite emoji

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="card">
                 <h3>Minh</h3>
-                <p>Favorite emoji: ?</p>
+                <p>Favorite emoji: 🤩</p>
             </div>
             <div class="card">
                 <h3>Sam</h3>
