I added a cat emoji that speaks to me on a deep level.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="card">
                 <h3>Isabel</h3>
-                <p>Favorite emoji: ?</p>
+                <p>Favorite emoji: 😼</p>
             </div>
             <div class="card">
                 <h3>Karla</h3>
