added my favorite emoji

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="card">
                 <h3>Mehraeel</h3>
-                <p>Favorite emoji: 😀</p>
+                <p>Favorite emoji: 😃</p>
             </div>
             <div class="card">
                 <h3>Isabel</h3>
