--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="card">
                 <h3>Jessica</h3>
-                <p>Favorite emoji: ?</p>
+                <p>Favorite emoji: 😈</p>
             </div>
             <div class="card">
                 <h3>Minh</h3>
